# edcert-tools

./: .gitignore  Cargo.toml  master.pub  master.secretkey
src/: main.rs
